samples/_failures_safe/1761602714_fa1983_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_69dafe1e.c: In function ‘tokenize’:
./samples/SAFE/__tmp_69dafe1e.c:156:5: error: expected expression at end of input
  156 |     return
      |     ^~~~~~
./samples/SAFE/__tmp_69dafe1e.c:156:5: error: expected declaration or statement at end of input
